--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,9 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+
     <div id="root"></div>
+  
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
@@ -41,4 +43,28 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+  <script>
+
+    $(document).ready(function(){
+      var sidebar = $(".mobile-left-side-bar");
+      var body = $("body");
+      $(document).on("click",".order-head-mobile",function(){
+        body.addClass("overlay has-bg-img");
+        body.css("overflow"," hidden")
+        sidebar.removeClass("close-order-sidebar");
+        sidebar.addClass("show-order-sidebar");
+      })
+  
+      $(document).bind('click', function(e) {
+      var $clicked = $(e.target);
+      if (! $clicked.hasClass("order-head-mobile"))
+        sidebar.removeClass("show-order-sidebar");
+        sidebar.addClass("close-order-sidebar");
+        body.removeClass("overlay has-bg-img");
+        body.css("overflow"," auto")
+      });
+      })
+      
+</script>
 </html>
